Improved email styling and copy, fixed button clipping.

--- a/app/static/style.css
+++ b/app/static/style.css
@@ -25,6 +25,7 @@ input,button {
 }
 
 input[type=submit],button {
+  min-width: 186px;
   font-size: 1.0rem;
   line-height: 1.0rem;
 }
